--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/animista.css">
 
 </head>
 <body>
+    <!-- js navigation -->
+
+    <div class="add__navigation">
+        <div class="container">
+            <span class="close__bars">&times;</span>
+            <nav class="add__navbar">
+                <a class="active" href="#home">home</a>
+                <a href="#about">about</a>
+                <a href="#resume">resume</a>
+                <a href="#works">works</a>
+                <a href="#comments">comments</a>
+                <a href="#contact">contact</a>
+              
+            </nav>
+        </div>
+    </div>
+
+    <!-- css navigation  -->
+
     <div class="navigation">
         <div class="container">
             <nav class="navbar">
@@ -20,13 +40,15 @@
                 <a href="#works">works</a>
                 <a href="#comments">comments</a>
                 <a href="#contact">contact</a>
-                <i class="fa-solid fa-bars"></i>
+              
             </nav>
         </div>
     </div>
+ 
     <!-- header start  -->
-    <header class="header" id="home">
+    <header class="header" id="home"> 
         <div class="container">
+            <i class="fa-solid fa-bars"></i>
             <div class="banner">
                 <h1>I'm Jonathan Doe.</h1>
                 <p>I'm a Manila based <span>graphic designer, illustrator</span> and <span>webdesigner</span> creating awesome and effective visual identities for companies of all sizes around the globe. Let's <a href="#about">start scrolling</a> and learn more <a href="#about">about me</a>.</p>
@@ -334,5 +356,8 @@
                 <p>© Copyright 2014 CeeVee  .  Design by <a target="_blank" href="https://www.instagram.com/muhammadibrohimov26/">muhammadibrohimov</a></p>
             </div>
         </footer>
+
+
+        <script src="js/script.js"></script>
 </body>
 </html>
