--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@
                                 <i class="fa-solid fa-plus"></i>
                             </div>
                         </div>
+                            <div class="add__work">
+                                <div class="add__work__item">
+                                    <div class="work__imgg">
+                                        <img src="img/portfolio/coffee.jpg" alt="rasmm">
+                                    </div>
+                                        <div class="title">
+                                            <h3>coffee</h3>
+                                           <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                           <span>sotib olish</span>
+                                        </div>
+                                        <div class="work__footer">
+                                            <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                            <button class="close__work">close</button>
+                                        </div>
+                                </div>
+                            </div>
                     </div>
                     <!-- 2 -->
 
@@ -203,7 +219,23 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p0"></i>
+                            </div>
+                        </div>
+                        <div class="add__work w2">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -213,7 +245,24 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p1"></i>
+                            </div>
+                        </div>
+
+                        <div class="add__work w3">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -223,7 +272,23 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p2"></i>
+                            </div>
+                        </div>
+                        <div class="add__work w4">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -233,7 +298,23 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p3"></i>
+                            </div>
+                        </div>
+                        <div class="add__work w5">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -243,7 +324,23 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p4"></i>
+                            </div>
+                        </div>
+                        <div class="add__work w6">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -253,7 +350,23 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p5"></i>
+                            </div>
+                        </div>
+                        <div class="add__work w7">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -263,7 +376,23 @@
                             <div class="add__hover">
                                 <h3>coffee</h3>
                                 <span>sotib olish</span>
-                                <i class="fa-solid fa-plus"></i>
+                                <i class="fa-solid fa-plus p6"></i>
+                            </div>
+                        </div>
+                        <div class="add__work w8">
+                            <div class="add__work__item">
+                                <div class="work__imgg">
+                                    <img src="img/portfolio/console.jpg" alt="rasmm">
+                                </div>
+                                    <div class="title">
+                                        <h3>coffee</h3>
+                                       <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                                       <span>sotib olish</span>
+                                    </div>
+                                    <div class="work__footer">
+                                        <a target="_blank" href="https://www.youtube.com/watch?v=6zwS4weSxXg">details</a>
+                                        <button class="close__work">close</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
